# QQBackupNew

./: .gitignore  README.md  pycode.py  pyproject.toml  架构.txt
app/base/: AppConfig.py  AssetsManager.py  ConfigManager.py  Const.py  FileManager.py  I18n.py  Logger.py  ProcessManager.py  Utils.py
app/chatter/: Chatter.py  Friend.py
app/feature/: Feature.py  FeatureManager.py  __init__.py
app/feature/Converter/: Converter.py  __init__.py
app/feature/Converter/Exporter/: Exporter.py  plaintext.py
app/feature/Converter/Importer/: Importer.py  qq.py
app/feature/Dumper/: Dumper.py  __init__.py
app/feature/Dumper/DB/QQ/Android/: LocalFolder.py
app/features/: FeatureManager.py
app/features/Dumper/DB/QQ/Android/: MIUIbackup.py
app/message/: Message.py  TextMessage.py
