[tool.poetry]
name = "qqbackup"
version = "0.0.1"
description = "QQBackup 再次重构"
authors = ["LY"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rsa = { version = "^4.9", optional = true }
av = { version = "^12.0.0", optional = true }
protobuf = { version = "^5.27.0", optional = true }
uttlv = { version = "^0.7.1", optional = true }
frida = { version = "^16.2.5", optional = true }
flask = { version = "^3.0.3", optional = true }
pilk = { version = "^0.2.4", optional = true }                  # or maybe pysilk?
bbpb = { version = "^1.3.1", optional = true }
rotki-pysqlcipher3 = { version = "^2024.1.2", optional = true }

[tool.poetry.extras]
encrypt-submit-data = ["rsa"]
convert-audio = ["pilk", "av"]
qq-android = ["protobuf"]
qq-windows = ["uttlv"]
qq-nt = ["bbpb", "rotki-pysqlcipher3"]
wechat = ["protobuf"]
frida = ["frida"]
webui = ["flask"]

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
